--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 </script>
 <div class="main">
 <div class="header">
-<h3> Shaw's News</h3>	
+<header> Shaw's News</header>	
 </div>
 <div class="news-paper">
 <div class="latest-news-section">
